# osmanip

./: .gitignore  CMakeLists.txt
examples/: redirection.cpp
include/utility/: output_redirector.hpp
src/graphics/: canvas.cpp
src/utility/: output_redirector.cpp
test/unit_tests/graphics/: tests_canvas.cpp  tests_plot_2D.cpp
test/unit_tests/manipulators/: tests_colsty.cpp  tests_common.cpp  tests_cursor.cpp  tests_decorator.cpp
test/unit_tests/progressbar/: tests_multi_progress_bar.cpp  tests_progress_bar.cpp
test/unit_tests/utility/: tests_output_redirector.cpp
